# ghostfs

./: .dockerignore  CLAUDE.md  CMakeLists.txt  Dockerfile.benchmark  Dockerfile.vs-benchmark  LICENSE  README.md  benchmark.sh  docker-benchmark.sh  vs-benchmark.sh
.github/workflows/: benchmark.yml  clang-format.yml  csi-build.yml  e2e-test.yml  macos-build.yml  ubuntu-build-dev.yml  ubuntu-build.yml  windows-build.yml  windows-e2e-test.yml
capnp/: access.capnp.c++  access.capnp.h  access.response.capnp.c++  access.response.capnp.h  bulkread.capnp  bulkread.capnp.c++  bulkread.capnp.h  bulkread.response.capnp  bulkread.response.capnp.c++  bulkread.response.capnp.h  bulkupload.capnp  bulkupload.capnp.c++  bulkupload.capnp.h  bulkupload.response.capnp  bulkupload.response.capnp.c++  bulkupload.response.capnp.h  copyfile.capnp  copyfile.capnp.c++  copyfile.capnp.h  copyfile.response.capnp  copyfile.response.capnp.c++  copyfile.response.capnp.h  create.capnp.c++  create.capnp.h  create.response.capnp.c++  create.response.capnp.h  flush.capnp.c++  flush.capnp.h  flush.response.capnp.c++  flush.response.capnp.h  fsync.capnp.c++  fsync.capnp.h  fsync.response.capnp.c++  fsync.response.capnp.h  getattr.capnp.c++  getattr.capnp.h  getattr.response.capnp.c++  getattr.response.capnp.h  ghostfs.capnp  ghostfs.capnp.c++  (+68 more)
cmake/: FindFUSE.cmake  FindWinFSP.cmake
deploy/kubernetes/: csi-driver.yaml  example-pvc.yaml
e2e/: Dockerfile  Dockerfile.csi  README.md  benchmark.sh  docker-compose.benchmark.yml  docker-compose.csi.yml  docker-compose.yml
e2e/tests/: run-benchmark.sh  run-csi-e2e.sh  run-e2e.sh
include/ghostfs/: acme.h  benchmark.h  cert_manager.h  copy.h  crypto.h  csi.h  fs.h  fs_common.h  http.h  rpc.h  thread_pool.h
source/: acme.cpp  auth.cpp  benchmark.cpp  cert_manager.cpp  copy.cpp  crypto.cpp  csi.cpp  fs.cpp  fs_common.cpp  fs_fuse.cpp  fs_winfsp.cpp  http.cpp  rpc.cpp  uuid.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: crypto.cpp  ghostfs.cpp
web/: package-lock.json  package.json  tailwind.config.js
web/src/: app.css  app.html
web/src/lib/: index.ts  utils.ts
web/src/lib/api/: client.ts  types.ts
web/src/lib/components/: BottomSheet.svelte  Breadcrumbs.svelte  ContextMenu.svelte  DeleteDialog.svelte  DropZone.svelte  FileBrowser.svelte  FileGrid.svelte  FileList.svelte  LoginForm.svelte  NewFolderDialog.svelte  RenameDialog.svelte  Toolbar.svelte  UploadDialog.svelte
web/src/lib/components/ui/: button.svelte  card.svelte  dialog.svelte  input.svelte
web/src/lib/stores/: auth.ts  clipboard.ts  files.ts  theme.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/browse/[...path]/: +page.svelte
